--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@
          
     <div class="container container-plan">
            <ul class="plan-list">
-               <li class="plan-item">
+               <li class="plan-item plan-icon">
                    <h3 class="title">Внимание к деталям</h3>
                    <p class="upper-title">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
-               <li class="plan-item">
+               <li class="plan-item plan-vector">
                    <h3 class="title">Пунктуальность</h3>
                    <p class="upper-title">Задача организации, в особенности же рамки и место обучения кадров влечет за собой</p>
                 </li>
-               <li class="plan-item">
+               <li class="plan-item plan-diagram">
                    <h3 class="title">Планирование</h3>
                    <p class="upper-title">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
-               <li class="plan-item">
+               <li class="plan-item plan-astronaut">
                    <h3 class="title">Современные технологии</h3>
                    <p class="upper-title">Значимость этих проблем настолько очевидна, что реализация плановых заданий</p>
                 </li>
