--- a/portfolio.html
+++ b/portfolio.html
@@ -145,18 +145,45 @@
               </div> 
                </section>
         </main>
-<footer class="footer">
-    <div class="container">
-        <a class="footer-link" href="./index.html"><span class="link-logo">Web</span><span
-                class="footer-link-visible">Studio</span></a>
-        <address class="footer-address footer-contacts">г. Киев, пр-т Леси Украинки, 26</address>
-        <ul class="footer-contacts">
-            <li class="footer-contacts-mail"><a class="footer-mail" href="mailto:info@example.com">info@example.com</a></li>
-            <li><a class="footer-phone" href="tel:+380991111111">+380991111111</a></li>
-        </ul>
-    </div>
-
-</footer>
-</footer>
+    <footer class="footer">
+        <div class="container container-footer">
+            <div>
+                <a class="footer-link" href="./index.html"><span class="link-logo">Web</span><span
+                        class="footer-link-visible">Studio</span></a>
+                <address class="footer-address footer-contacts">г. Киев, пр-т Леси Украинки, 26</address>
+                <ul class="footer-contacts">
+                    <li class="footer-contacts-mail"><a class="footer-mail"
+                            href="mailto:info@example.com">info@example.com</a></li>
+                    <li><a class="footer-phone" href="tel:+380991111111">+380991111111</a></li>
+                </ul>
+            </div>
+            <div class="footer-wrap">
+                <h2 class="join">ПРИСОЕДИНЯЙТЕСЬ</h2>
+                <ul class="footer-icon-list">
+                    <li class="team-footer">
+                        <a href="" class="footer-icon"><svg class="footer-social-network">
+                                <use href="./image/network/symbol-defs.svg#icon-instagram"></use>
+                            </svg></a>
+                    </li>
+                    <li class="team-footer">
+                        <a href="" class="footer-icon"><svg class="footer-social-network">
+                                <use href="./image/network/symbol-defs.svg#icon-twitter"></use>
+                            </svg></a>
+                    </li>
+                    <li class="team-footer">
+                        <a href="" class="footer-icon"><svg class="footer-social-network">
+                                <use href="./image/network/symbol-defs.svg#icon-facebook"></use>
+                            </svg></a>
+                    </li>
+                    <li class="team-footer">
+                        <a href="" class="footer-icon"><svg class="footer-social-network">
+                                <use href="./image/network/symbol-defs.svg#icon-linkedin"></use>
+                            </svg></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    
+    </footer>
 </body>
 </html>
