--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <ul class="team-list">
                 <li class="team-caption-list">
                     <img class="team-img" src="./image/team/img1.jpg" alt="Игорь Демьяненко" width="270" height="260" >
-                   <div class="team-captiom-title">
+                   <div  class=" team-captiom-title">
                         <h3 class="team-title">Игорь Демьяненко</h3>
                         <p class="team-desc">Product Designer</p>
                       <ul class="team-icon-list">
@@ -227,8 +227,8 @@
             </ul>
 </div>
     </section>
-    <section>
-        <div>
+    <section class="regular-clients">
+        <div class="container">
             <h2 class="regular-customers">Постоянные клиенты</h2>
             <ul class="clients-list">
                 <li class="logo-clients"><a href="" class="logo-clients-link"><svg class="logo-clients-icon"><use href="./image/clients/clients.svg#icon-logo6"></use></svg></a></li>
