--- a/portfolio.html
+++ b/portfolio.html
@@ -59,15 +59,17 @@
                         <div>
                             <ul class="list">
                                <li class="list-title">
-                                   <a class="list-title-wrapper" href=""><p class="lopa">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит
-                                    посетителю получить
-                                    исчерпывающие сведения о компании или частном лице.</p>
-                                       <div class="list-active"><img src="./image/portfolio/Texno.jpg" alt="Технокряк" width="370" height="294"></div>
-                                          <div class="list-title-subject">
-                                                <h2 class="subject" >Технокряк</h2>
-                                                <p class="text" >Веб-сайт</p>
-                                        
-                                          </div class="">
+                                  <div class="list-overlay">
+                                       <a class="list-title-wrapper" href=""><p class="lopa">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит
+                                        посетителю получить
+                                        исчерпывающие сведения о компании или частном лице.</p>
+                                           <div class="list-active"><img src="./image/portfolio/Texno.jpg" alt="Технокряк" width="370" height="294"></div>
+                                              <div class="list-title-subject">
+                                                    <h2 class="subject" >Технокряк</h2>
+                                                    <p class="text" >Веб-сайт</p>
+                                            
+                                              </div class="">
+                                  </div>
                                    </a>
                                 </li>
                                 <li class="list-title">
